@@ -9,9 +9,9 @@
     },
     "github_id"             : "891c251b925e4e967fa9",
     "github_secret"         : "afe9bed1e810c5dc44c4c2a953fc6efb1e5b0545",
-    "dropbox_id"            : "0nd3ssnp5fp7tqs",
+    "dropbox_key"           : "0nd3ssnp5fp7tqs",
     "dropbox_secret"        : "r61lxpchmk8l06o",
-    "dropbox_chooser_id"    : "o7d6llji052vijk",
+    "dropbox_chooser_key"   : "o7d6llji052vijk",
     "show_keys_panel"       : true,
     "server"    : true,
     "logs"      : false,
