@@ -484,7 +484,7 @@ function baseInit(pCallBack){
     cloudcmd.KeyBinding();
 }
 
-CloudClient.loadConfig              = function(pCallBack){
+CloudClient.getConfig              = function(pCallBack){
     if(!cloudcmd.Config)
         return DOM.ajax({
             url:'/config.json',
@@ -494,6 +494,8 @@ CloudClient.loadConfig              = function(pCallBack){
                 Util.exec(pCallBack, pConfig);
             }
         });
+    else
+        Util.exec(pCallBack, cloudcmd.Config);
 };
 
 
