@@ -4,7 +4,7 @@ var CloudCommander, Util, DOM, $, Github, cb;
 (function(){
     "use strict";
     
-    const   cloudcmd                        = CloudCommander,            
+    const   cloudcmd                        = CloudCommander,
             Cache                           = DOM.Cache,
             
             APIURL                          = '/api/v1',
